--- a/episode_3/lang/fr/text/abschnitt_22/loca.csv
+++ b/episode_3/lang/fr/text/abschnitt_22/loca.csv
@@ -129,10 +129,10 @@ spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_29;Donc vous vouliez le f
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_30_direction;grim
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_30;Et si quelque chose peut le faire c'est bien le cambriolage du siècle, perpétré en son nom par un autre voleur !
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_31_direction;unbelieving
-spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_31;Il n'est pas venu.
+spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_31;Mais il n'est pas venu.
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_32;Mais j'ai tout de même eu ma revanche !
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_33_direction;triumphantly
-spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_33;"Le ""voleur élégant"", maintenant un meurtrier poseur de bombes !"
+spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_33;"Le ""voleur élégant"" est maintenant un meurtrier poseur de bombes !"
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_34_direction;grim satisfaction
 spokentexts_a22_rabennest_seq_a22_rabennest_ankunft_st_34;Oh, j'espère vraiment qu'il est encore parmi nous, impuissant devant la façon dont je ruine son oeuvre... comme il a ruiné la mienne !
 sequences_a22_rabennest_seq_a22_rabennest_ankunft#54;[The butler looks briefly to the secret door, then turns back.]
